--- a/admin-dashboard/dashboard.html
+++ b/admin-dashboard/dashboard.html
@@ -469,12 +469,30 @@
     </div>
   </div>
 
+  <!-- Post Details Modal -->
+  <div class="modal" id="postDetailsModal">
+    <div class="modal-content modal-lg">
+      <div class="modal-header">
+        <h3>Post Details</h3>
+        <button class="modal-close" data-modal="postDetailsModal">
+          <i class="fas fa-times"></i>
+        </button>
+      </div>
+      <div class="modal-body" id="postDetailsBody">
+        <div class="loading-spinner">
+          <i class="fas fa-spinner fa-spin"></i>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Scripts -->
   <script src="js/utils.js"></script>
   <script src="js/api.js"></script>
   <script src="js/auth.js"></script>
   <script src="js/modals.js"></script>
   <script src="js/users.js"></script>
+  <script src="js/posts.js"></script>
   <script src="js/main.js"></script>
 </body>
 
